<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2023-2024 The Evolution X Project
                   2016-2022 crDroid Android Project
     SPDX-License-Identifier: Apache-2.0
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- FCNTParts -->
    <string name="fcnt_parts_title">FCNT Parts</string>
    <string name="kernel_node_access_error">Kernel node access failed! Please ensure the provided path to the sysfs or procfs attribute is accurate, that it has appropriate permissions, and the SELinux policies are properly configured.</string>
    <string name="kernel_node_returned_value_unknown">No string resource found for the value returned by the node.</string>
    <string name="tile_add">Add tile</string>
    <string name="tile_added">Tile added</string>
    <string name="tile_not_added">Tile not added</string>
    <string name="tile_already_added">Tile already added</string>
    <string name="tile_on">On</string>
    <string name="tile_off">Off</string>
    <string name="tile_camera_in_use">Camera in use</string>

    <!-- Action Key -->
    <string name="actionkey_title">Action key</string>
    <string name="actionkey_summary">Configure device action key behavior</string>
    <string name="actionkey_perform_type_short_title">Short press</string>
    <string name="actionkey_perform_type_long_title">Long press</string>
    <string name="actionkey_hold_duration_title">Long press hold duration (ms)</string>

    <!-- Action Key - Supported actions -->
    <string name="actionkey_perform_no_action_title">No action</string>
    <string name="actionkey_perform_assistant_title">Digital Assistant</string>
    <string name="actionkey_perform_lens_title">Lens</string>
    <string name="actionkey_perform_launch_app_title">Launch app</string>

    <!-- Exlider -->
    <string name="exlider_title">Exlider</string>
    <string name="exlider_summary">Use fingerprint sensor for scroll gestures</string>
    <string name="exlider_summary_2">- Put finger to fingerprint sensor, hold to turn on scroll mode.\n- On scroll mode, you can scroll it sliding finger on sensor.\n- If you have any issues about display, please turn off exlider.</string>
    <string name="exlider_main_switch_title">Use Exlider</string>
    <string name="exlider_scroll_speed_title">Scroll speed</string>
    <string name="exlider_scroll_speed_summary">Adjust exlider scroll speed</string>
    <string name="exlider_enabled_message">Exlider Scroll Mode</string>
    <string name="exlider_disabled_message">Exlider turned off</string>
    <string name="exlider_fingerprint_extension_error">Cannot initialize fingerprint sensor extension</string>

    <!-- Hold on display -->
    <string name="hold_on_display_title">Keep lit when held</string>
    <string name="hold_on_display_summary">Keep screen backlight on when the phone is held and detects motion.</string>

    <!-- Custom seekbar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">by default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong tap to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>
</resources>
